# flux-local

./: .cruft.json  .gitignore  .krmignore  .mise.toml  .pre-commit-config.yaml  .pre-commit-config.yaml.rej  .pylintrc  .ruff.toml  .yaml-lint.yaml  CONTRIBUTING.md  Dockerfile  README.md  codecov.yml  mypy.ini  pyproject.toml  pytest.ini  renovate.json  renovate.json5  requirements.txt  requirements_dev.txt  requirements_dev.txt.rej  run-mypy  setup.cfg  setup.py
.agent/skills/developer/: SKILL.md
.agent/skills/gh-release/: SKILL.md
.agent/skills/gh-release/scripts/: create-release.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: codecov.yml  copilot-instructions.md  renovate.json5  renovate.json5.rej
.github/workflows/: container-release.yaml  container-test.yaml  cruft.yaml  flux-local-diff.yaml  flux-local-test.yaml  lint.yaml  lint.yaml.rej  pages.yaml  publish.yaml  python-package.yaml  python-package.yml  python-publish.yaml  python-publish.yml  test.yaml
action/diff/: action.yml
action/test/: action.yml
docs/: BOOTSTRAPPING.md
flux_local/: DESIGN.md  __init__.py  __main__.py  builder.py  cmd.py  command.py  config.py  context.py  exceptions.py  flux_local.py  git_repo.py  helm.py  image.py  kustomize.py  manifest.py  repo.py  resource_diff.py  temp_config.py  values.py  visitor.py
flux_local/helm_controller/: __init__.py  artifact.py  controller.py
flux_local/kustomize_controller/: __init__.py  artifact.py  controller.py
flux_local/orchestrator/: __init__.py  loader.py  orchestrator.py
flux_local/source_controller/: __init__.py  artifact.py  cache.py  controller.py  git.py  oci.py  secret.py  source_controller.py
flux_local/store/: __init__.py  artifact.py  in_memory.py  status.py  store.py  watcher.py
flux_local/task/: __init__.py  context.py  service.py
flux_local/tool/: __init__.py  build.py  build_common.py  build_helm.py  build_kustomization.py  diagnostics.py  diff.py  flux_local.py  format.py  get.py  get_common.py  get_helm.py  get_kustomization.py  manifest.py  selector.py  test.py  test_kustomization.py  visitor.py
flux_local/tool/shell/: __init__.py  action.py  repl.py
script/: DESIGN.md  bootstrap  lint  run-mypy.sh  setup  test  update
tests/: __init__.py  test_command.py  test_flux_local.py  test_git_repo.py  test_helm.py  test_image.py  test_kustomize.py  test_manifest.py  test_resource_diff.py  test_values.py  test_visitor.py
tests/__snapshots__/: test_git_repo.ambr  test_helm.ambr  test_kustomize.ambr  test_resource_diff.ambr  test_values.ambr
tests/helm_controller/: __init__.py  test_controller.py
tests/helm_controller/__snapshots__/: test_controller.ambr
tests/kustomize_controller/: __init__.py  conftest.py  test_controller.py
tests/kustomize_controller/__snapshots__/: test_controller.ambr
tests/source_controller/: __init__.py  test_controller.py  test_source_controller.py
tests/store/: __init__.py  test_in_memory.py  test_watcher.py
tests/task/: __init__.py  test_service.py
tests/testdata/: repo.configmap.golden
tests/testdata/cluster/: README.md
tests/testdata/cluster10/: README.md
tests/testdata/cluster10/apps/: kustomization.yaml
tests/testdata/cluster11/cluster/: apps.yaml
tests/testdata/cluster12/apps/: kustomization.yaml
tests/testdata/cluster12/cluster/: apps.yaml
tests/testdata/cluster2/: README.md
tests/testdata/cluster2/apps/: kustomization.yaml
tests/testdata/cluster2/flux/: apps.yaml
tests/testdata/cluster3/: README.md
tests/testdata/cluster4/: README.md
tests/testdata/cluster4/flux/: apps.yaml
tests/testdata/cluster5/: README.md  kustomization.yaml  repositories.yaml  weave-gitops-release.yaml
tests/testdata/cluster6/cluster/: apps.yaml
tests/testdata/cluster6/renovate/: release.yaml  repository.yaml
tests/testdata/cluster8/: README.md
tests/testdata/cluster8/apps/: kustomization.yaml  pod-pvc.yaml  podinfo-tls-values.yaml  podinfo-values.yaml  podinfo.yaml  pods.yaml  (+2 more)
tests/testdata/cluster9/: README.md
tests/testdata/extra/: cluster-config-override.yaml
tests/testdata/flux_local/: build_helm.yaml  diff_hr_all.yaml  diff_hr_all_namespaces.yaml  diff_hr_not_found.yaml  diff_hr_not_found_all_namespaces.yaml  diff_hr_not_found_namespace.yaml  get_hr.yaml  get_hr_name.yaml  get_hr_namespace.yaml  get_ks.yaml  manifest.yaml
tests/testdata/helm-repo/: kustomization.yaml  metallb-release.yaml  sources.yaml
tests/testdata/image_error/: README.md
tests/testdata/policies/: fail.yaml  pass.yaml
tests/testdata/repo/: all.golden  cluster-secrets.yaml  cluster-settings.yaml  configmap.grep.golden  kustomization.yaml
tests/tool/: __init__.py  conftest.py  test_build.py  test_build_all.py  test_build_hr.py  test_build_ks.py  test_diagnostics.py  test_diff.py  test_diff_hr.py  test_diff_ks.py  test_flux_local.py  test_format.py  test_get_cluster.py  test_get_hr.py  test_get_hr_new.py  test_get_ks.py  test_get_ks_new.py  test_selector.py  test_shell.py  test_test.py  test_visitor.py
tests/tool/__snapshots__/: test_build.ambr  test_build_all.ambr  test_build_hr.ambr  test_build_ks.ambr  test_diagnostics.ambr  test_diff.ambr  test_diff_hr.ambr  test_diff_ks.ambr  test_get_cluster.ambr  test_get_hr.ambr  test_get_hr_new.ambr  test_get_ks.ambr  test_get_ks_new.ambr
tests/tool/testdata/: build.yaml  build6.yaml  build_helm.yaml  build_helm6.yaml  diff_hr.yaml  diff_hr6.yaml  diff_hr_all.yaml  diff_hr_all_namespaces.yaml  diff_hr_external.yaml  diff_hr_external_limit.yaml  diff_hr_limit.yaml  diff_hr_not_found.yaml  diff_hr_not_found_all_namespaces.yaml  diff_hr_not_found_namespace.yaml  diff_hr_yaml.yaml  diff_ks.yaml  diff_ks_external.yaml  diff_ks_yaml.yaml  diff_ks_yaml_empty_sources.yaml  diff_ks_yaml_limit.yaml  get_cluster.yaml  get_cluster2.yaml  get_cluster3.yaml  get_cluster4.yaml  get_cluster6.yaml  get_cluster7.yaml  get_cluster_all.yaml  get_cluster_yaml.yaml  get_hr.yaml  get_hr2.yaml  get_hr3.yaml  get_hr4.yaml  get_hr5.yaml  get_hr6.yaml  get_hr7.yaml  get_hr_name.yaml  get_hr_namespace.yaml  get_ks.yaml  get_ks2.yaml  get_ks3.yaml  (+15 more)
(+113 files in other folders)
