[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77.0"]

[project]
name = "flux_local"
version = "7.9.0"
license = "Apache-2.0"
license-files = ["LICENSE"]
description = "flux-local is a set of tools and libraries for managing a local flux gitops repository focused on validation steps to help improve quality of commits, PRs, and general local testing."
readme = "README.md"
authors = [{ name = "Allen Porter", email = "allen.porter@gmail.com" }]
requires-python = ">=3.10"
classifiers = []
dependencies = [
  "GitPython>=3.1.30",
  "PyYAML>=6.0",
  "aiofiles>=22.1.0",
  "mashumaro>=3.12",
  "nest-asyncio>=1.5.6",
  "oras>=0.2.31",
  "pytest>=7.2.1",
  "pytest-asyncio>=0.20.3",
  "python-slugify>=8.0.1",
]

[project.urls]
Source = "https://github.com/allenporter/flux_local"

[tool.setuptools.packages.find]
include = ["flux_local*"]

[project.entry-points."console_scripts"]
flux-local  = "flux_local.tool.flux_local:main"

[tool.mypy]
exclude = [
  "venv/",
]
platform = "linux"
show_error_codes = true
follow_imports = "normal"
local_partial_types = true
strict_equality = true
no_implicit_optional = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
disable_error_code = [
    "import-untyped",
]
extra_checks = false
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
warn_return_any = true
warn_unreachable = true
ignore_missing_imports = true
disallow_any_generics = true
no_implicit_reexport = true
warn_no_return = true
