[metadata]
name = flux-local
version = 0.0.2
description = flux-local is a python library and set of tools for managing a flux gitops repository, with validation steps to help improve quality of commits, PRs, and general local testing.
long_description = file: README.md
long_description_content_type = text/markdown
prodid = github.com/allenporter/flux-local
url = https://github.com/allenporter/flux-local
author = Allen Porter
author_email = allen.porter@gmail.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License


[options]
packages = find:
install_requires =
  pydantic>=1.10.4
  GitPython>=3.1.30
  PyYAML>=6.0

[options.packages.find]
exclude =
    tests
    venv


[options.package_data]
flux_local = py.typed

[flake8]
exclude = venv
max-line-length = 88
ignore =
    E501,
    W503
