[metadata]
name = flux-local
version = 6.0.1
description = flux-local is a python library and set of tools for managing a flux gitops repository, with validation steps to help improve quality of commits, PRs, and general local testing.
long_description = file: README.md
long_description_content_type = text/markdown
prodid = github.com/allenporter/flux-local
url = https://github.com/allenporter/flux-local
author = Allen Porter
author_email = allen.porter@gmail.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License


[options]
packages = find:
python_requires = >=3.10
install_requires =
  aiofiles>=22.1.0
  nest_asyncio>=1.5.6
  python-slugify>=8.0.0
  GitPython>=3.1.30
  PyYAML>=6.0
  mashumaro>=3.12
  # Note: flux-local provides repo testing using pytest
  pytest>=7.2.1
  pytest-asyncio>=0.20.3

[options.packages.find]
exclude =
    tests
    venv

[options.package_data]
flux_local = py.typed

[options.entry_points]
console_scripts =
    flux-local = flux_local.tool.flux_local:main
