[metadata]
name = flux_local
version = 7.5.0
description = flux-local is a python library and set of tools for managing a flux gitops repository, with validation steps to help improve quality of commits, PRs, and general local testing.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/allenporter/flux-local
author = Allen Porter
author_email = allen.porter@gmail.com
license = Apache-2.0
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
prodid = github.com/allenporter/flux-local

[options]
packages = find:
install_requires =
    GitPython>=3.1.30
    PyYAML>=6.0
    aiofiles>=22.1.0
    mashumaro>=3.12
    slugify>=8.0.4
    nest-asyncio>=1.5.6
    oras>=0.2.31
    pytest>=7.2.1
    pytest-asyncio>=0.20.3
    python-slugify>=8.0.1
python_requires = >=3.10

[options.packages.find]
exclude =
    tests
    venv

[options.entry_points]
console_scripts =
    flux-local = flux_local.tool.flux_local:main

[options.package_data]
flux_local = py.typed
